stretch fix?

--- a/gamepage/gamepage.css
+++ b/gamepage/gamepage.css
@@ -38,7 +38,7 @@ body {
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     line-height: 1.6;
-    overflow: scroll;
+    
 }
 
 strong {
@@ -139,7 +139,7 @@ html {
 
 .home {
     grid-column:2/3 ;
-    grid-row:1/3;
+    grid-row:1/2;
     height:auto;
     width:100%;
     background-color: var(--clr-bg);
